Published multiple files

--- a/src/site/notes/000 data base/00===/⌨️00 сон.md
+++ b/src/site/notes/000 data base/00===/⌨️00 сон.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"permalink":"/000-data-base/00/00-son/"}
 ---
 
-📐 [[000 Темы/007 video/ш_Во сколько ложитесь спать\|ш_Во сколько ложитесь спать]] - тест
+📐 [[000 Темы/007 video/ш_Во сколько ложитесь спать\|ш_Во сколько ложитесь спать]] - тест2
 ### задачи:
 - [ ] 📆[[000 Темы/Здоровье/может начать спать на полу +попробовать полубревно (под шею)\|может начать спать на полу +попробовать полубревно (под шею)]]
 - [ ] 🦄найти програму в которую можно записывать сон по таймлайну и выдаёт статистику ⏬
